Update README.md
Updated project description, features, technologies, project structure, and running instructions.